# DiplomGeant

./: ActionInitialization.cpp  ActionInitialization.h  CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  EventAction.cpp  EventAction.h  ImagingRunAcrion.cpp  ImagingRunAcrion.h  PhysicsList.cpp  PhysicsList.h  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  Run.cpp  Run.h  RunAction.cpp  RunAction.h  SensitiveDetector.cpp  SensitiveDetector.h  SteppingAction.cpp  SteppingAction.h  XRayImagingSteppingAction.cpp  XRayImagingSteppingAction.h  grid.cpp  grid.h  main.cpp  myphysicslist.cpp  myphysicslist.h  sensetivedetector.cpp  sensetivedetector.h
